@@ -1,5 +1,6 @@
 * 2013-11-14 - tobias.friedrich@open-xchange.com
 
+ - Fix for bug 29817: Consider "If-Match" header on DELETE and PUT operations
  - Fix for bug 29770: Use custom (de)serialization for session in distributed events 
 
 * 2013-11-13 - thorben.betten@open-xchange.com
